Fixed dropdown menu alignment in review page

--- a/react/src/components/review.css
+++ b/react/src/components/review.css
@@ -318,7 +318,7 @@ span.li {
 
 .r-select ul {
     position: absolute;
-    top: 78%;
+    top: 100%;
     left: 0%;
     box-shadow: 2px 20px 30px rgba(0, 0, 0, 0.3);
     list-style-type: none;
@@ -521,7 +521,6 @@ span.li {
     background: #2f3640;
     color: #f5f6fa;
     max-height: 0;
-    ;
     width: 100%;
     opacity: 0;
     transition: all 0.4s;
